<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CBCBFFFF"
    tools:context=".Createnotes">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03">

        <EditText
            android:id="@+id/title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_design"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="text"
            android:padding="15dp"
            android:textColorHint="@color/black"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/notes_desc_input"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:height="300dp"
            android:background="@drawable/input_design"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:padding="15dp"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/create_btn"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create" />

        <Button
            android:id="@+id/button3"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>